:rocket: feat:create user microservice

--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Databases 
+server.port=8081
 
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms-user
+spring.datasource.username=postgres
+spring.datasource.password=084603
+spring.jpa.hibernate.ddl-auto=update
