--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ms-user
 spring.datasource.username=postgres
 spring.datasource.password=084603
 spring.jpa.hibernate.ddl-auto=update
+
+spring.rabbitmq.addresses=amqps://niigfwxx:szBFXq2tycgM9qIhr2G_ejX_l9Jbj9tT@beaver.rmq.cloudamqp.com/niigfwxx
+
+broker.queue.email.name=default.email
