:rocket: fix: remove password

--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.platform=postgres
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ms-email
 spring.datasource.username=postgres
-spring.datasource.password=084603
+spring.datasource.password=******
 spring.jpa.hibernate.ddl-auto=update
 
-spring.rabbitmq.addresses=amqps://niigfwxx:szBFXq2tycgM9qIhr2G_ejX_l9Jbj9tT@beaver.rmq.cloudamqp.com/niigfwxx
+spring.rabbitmq.addresses=amqps://Niigfwxx:szBFXq2tycgM9qIhr2G_ejX_l9Jbj9tT@beaver.rmq.cloudamqp.com/niigfwxx
 
 
 broker.queue.email.name=default.email
