:rocket: docs: update file properties

--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.rabbitmq.addresses=amqps://Niigfwxx:szBFXq2tycgM9qIhr2G_ejX_l9Jbj9tT@beav
 
 
 broker.queue.email.name=default.email
+
+# Config Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=plataformawms@gmail.com
+# Criar e colocar a senha de aplicativo aqui.
+spring.mail.password=**** **** **** ****
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
